# CE7490-RAID6-VM

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test.sh  vis.py  vis_chunk_size.py  vis_disk_num.py  vis_files_read.py  vis_files_rebuild.py  vis_files_write.py
data/: shakespeare_small.txt
images/: flow.drawio
raid6vm/: config.py  vm_disk.py
raid6vm/vm_app/: Dockerfile  build.sh
raidvm/: RAID6.py  config.py
raidvm/vm_app/: app.py  build.sh  p2p.py
saved/localdisk/: chunk_size_1024_time.npz  chunk_size_128_time.npz  chunk_size_16_time.npz  chunk_size_2048_time.npz  chunk_size_256_num_disk_10_time.npz  chunk_size_256_num_disk_12_time.npz  chunk_size_256_num_disk_14_time.npz  chunk_size_256_num_disk_16_time.npz  chunk_size_256_num_disk_18_time.npz  chunk_size_256_num_disk_20_time.npz  chunk_size_256_num_disk_22_time.npz  chunk_size_256_num_disk_24_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_10mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_15mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_1mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_20mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_2mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_500kbmb.jpeg_time.npz  chunk_size_256_num_disk_8_SampleJPGImage_5mbmb.jpeg_time.npz  chunk_size_256_num_disk_8_alphabet.txt_time.npz  (+10 more)
src/: GaloisField.py  RAID6.py  config.py  utils.py  vm_disk.py
storage_rebuild/: disk_0  disk_1  disk_2  disk_3  disk_4  disk_5  disk_6  disk_7
test/: test_rebuild.py  test_retrieve.py  test_write.py
(+31 files in other folders)
